# NVidiaDriveAGX-Orin_ROS_Driveworks_Node_with_YOLOv8

./: .gitignore  README.md  Toolchain-V5L.cmake  cross_compile.sh  fix_symlinks.py  nvmedia_isp_stat.h  restore_cmake_backups.sh
src/drive_yolo/: CMakeLists.txt  package.xml  requirements.txt
src/drive_yolo/docs/: POINTCLOUD_DELAY_DEMO.md  POINTCLOUD_OVERLAY_GUIDE.md  SYNCHRONIZATION_GUIDE.md
src/drive_yolo/include/drive_yolo/: lidar_camera_fusion.hpp  object_tracker.hpp  object_tracker_3d.hpp  yolo_infer.hpp
src/drive_yolo/launch/: 3d_tracking_pipeline.launch  3dtracking_pipeline.launch  LidarandCamerapipeline.launch  M8VIL_TFs.launch  complete_detection_pipeline.launch  complete_system.launch  detection_visualizer.launch  lidar_camera_fusion.launch  lidar_camera_fusion_with_sync.launch  modular_fusion_pipeline.launch  motpy_tracking.launch  osi2ros_lidar.launch  pointcloud_camera_overlay.launch  pointcloud_delay_demo.launch  static_object_detector.launch  sync_diagnostics.launch  tracking_visualizer_only.launch  tracking_with_rviz.launch  udp_vehicle_position.launch  yolo_driveworks.launch  yolo_ros_camera.launch
src/drive_yolo/msg/: Detection.msg  DetectionWithDistance.msg  Detections.msg  DetectionsWithDistance.msg  ProjectedPoint.msg  ProjectedPoints.msg  TrackedObject.msg  TrackedObject3D.msg  TrackedObjects.msg  TrackedObjects3D.msg
src/drive_yolo/rviz/: pointcloud_overlay.rviz  tracking_visualization.rviz
src/drive_yolo/scripts/: detection_visualizer_node.py  fused_data2ros2.py  install_python_deps.sh  osi2ros_lidar.py  tracking_3d_node.py  tracking_rviz_visualizer.py
src/drive_yolo/src/: camera_info_publisher.cpp  driveworks_camera.cpp  image_publisher.cpp  lidar_camera_fusion.cpp  lidar_camera_fusion_node.cpp  object_tracker.cpp  object_tracker_3d.cpp  pointcloud_delay_node.cpp  pointcloud_filter_node.cpp  pointcloud_projector_node.cpp  speed_monitor_node.cpp  static_object_detector_node.cpp  sync_diagnostics_node.cpp  tracking_3d_node.cpp  tracking_node.cpp  udp_vehicle_tf_publisher.cpp  yolo_infer.cpp  yolo_node.cpp  yolo_visualizer.cpp
